@@ -252,6 +252,7 @@ extern int ay_player_playlist_get_total_elements(void);
 extern void ay_player_playlist_add(char *archivo);
 extern void ay_player_playlist_remove(int position);
 extern void ay_player_playlist_get_item(int position,char *nombre);
+extern int ay_player_playlist_item_actual;
 
 extern z80_byte audiodac_last_value_data;
 
